Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignIntObjTextObj.quorum
Text t
t:SetValue("text")
Integer i = cast(Integer, t)